--- a/less/main.less
+++ b/less/main.less
@@ -1,9 +1,12 @@
 @import "/fonts/cabin.less";
 @import "/fonts/cabin-condensed.less";
 @import "/fonts/cabin-sketch.less";
+@import "/fonts/calligraffitti.less";
 @import "/fonts/codystar.less";
 @import "/fonts/dancing-script.less";
+@import "/fonts/fredericka-the-great.less";
 @import "/fonts/indie-flower.less";
+@import "/fonts/megrim.less";
 @import "/fonts/oswald.less";
 
 
