--- a/fonts/cabin-condensed-bold.less
+++ b/fonts/cabin-condensed-bold.less
@@ -1,9 +1,26 @@
-@font-face {
-	font-family: "Cabin Condensed";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Cabin Condensed Bold"),
-		local("CabinCondensed-Bold"),
-		url("/fonts/assets/CabinCondensed-Bold.woff") format("woff"),
-		url("/fonts/assets/CabinCondensed-Bold.ttf") format("truetype");
+@font-family-list_cabin-condensed-bold: "Cabin Condensed", sans-serif;
+@font-weight_cabin-condensed-bold: 700;
+
+.font-face_cabin-condensed-bold() {
+	@font-face {
+		font-family: "Cabin Condensed";
+		font-style: normal;
+		font-weight: @font-weight_cabin-condensed-bold;
+		src: local("Cabin Condensed Bold"),
+			local("CabinCondensed Bold"),
+			local("CabinCondensed-Bold"),
+			url("/fonts/assets/CabinCondensed-Bold.woff") format("woff"),
+			url("/fonts/assets/CabinCondensed-Bold.ttf") format("truetype");
+	}
+}
+
+.font_cabin-condensed-bold() {
+	.font-face_cabin-condensed-bold();
+	font-family: @font-family-list_cabin-condensed-bold;
+	font-weight: @font-weight_cabin-condensed-bold;
+}
+.font_cabin-condensed-bold(@properties) {
+	.font-face_cabin-condensed-bold();
+	font: @properties @font-family-list_cabin-condensed-bold;
+	font-weight: @font-weight_cabin-condensed-bold;
 }
