--- a/fonts/cabin-semibold-italic.less
+++ b/fonts/cabin-semibold-italic.less
@@ -1,9 +1,29 @@
-@font-face {
-	font-family: "Cabin";
-	font-style: italic;
-	font-weight: 600;
-	src: local("Cabin SemiBold Italic"),
-		local("Cabin-SemiBoldItalic"),
-		url("/fonts/assets/Cabin-SemiBoldItalic.woff") format("woff"),
-		url("/fonts/assets/Cabin-SemiBoldItalic.ttf") format("truetype");
+@font-family-list_cabin-semibold-italic: "Cabin", sans-serif;
+@font-style_cabin-semibold-italic: italic;
+@font-weight_cabin-semibold-italic: 700;
+
+.font-face_cabin-semibold-italic() {
+	@font-face {
+		font-family: "Cabin";
+		font-style: @font-style_cabin-semibold-italic;
+		font-weight: @font-weight_cabin-semibold-italic;
+		src: local("Cabin SemiBold Italic"),
+			local("Cabin SemiBoldItalic"),
+			local("Cabin-SemiBoldItalic"),
+			url("/fonts/assets/Cabin-SemiBoldItalic.woff") format("woff"),
+			url("/fonts/assets/Cabin-SemiBoldItalic.ttf") format("truetype");
+	}
+}
+
+.font_cabin-semibold-italic() {
+	.font-face_cabin-semibold-italic();
+	font-family: @font-family-list_cabin-semibold-italic;
+	font-style: @font-style_cabin-semibold-italic;
+	font-weight: @font-weight_cabin-semibold-italic;
+}
+.font_cabin-semibold-italic(@properties) {
+	.font-face_cabin-semibold-italic();
+	font: @properties @font-family-list_cabin-semibold-italic;
+	font-style: @font-style_cabin-semibold-italic;
+	font-weight: @font-weight_cabin-semibold-italic;
 }
