--- a/fonts/cabin-condensed-semibold.less
+++ b/fonts/cabin-condensed-semibold.less
@@ -1,9 +1,26 @@
-@font-face {
-	font-family: "Cabin Condensed";
-	font-style: normal;
-	font-weight: 600;
-	src: local("Cabin Condensed SemiBold"),
-		local("CabinCondensed-SemiBold"),
-		url("/fonts/assets/CabinCondensed-SemiBold.woff") format("woff"),
-		url("/fonts/assets/CabinCondensed-SemiBold.ttf") format("truetype");
+@font-family-list_cabin-condensed-semibold: "Cabin Condensed", sans-serif;
+@font-weight_cabin-condensed-semibold: 600;
+
+.font-face_cabin-condensed-semibold() {
+	@font-face {
+		font-family: "Cabin Condensed";
+		font-style: normal;
+		font-weight: @font-weight_cabin-condensed-semibold;
+		src: local("Cabin Condensed SemiBold"),
+			local("CabinCondensed SemiBold"),
+			local("CabinCondensed-SemiBold"),
+			url("/fonts/assets/CabinCondensed-SemiBold.woff") format("woff"),
+			url("/fonts/assets/CabinCondensed-SemiBold.ttf") format("truetype");
+	}
+}
+
+.font_cabin-condensed-semibold() {
+	.font-face_cabin-condensed-semibold();
+	font-family: @font-family-list_cabin-condensed-semibold;
+	font-weight: @font-weight_cabin-condensed-semibold;
+}
+.font_cabin-condensed-semibold(@properties) {
+	.font-face_cabin-condensed-semibold();
+	font: @properties @font-family-list_cabin-condensed-semibold;
+	font-weight: @font-weight_cabin-condensed-semibold;
 }
