--- a/fonts/cabin-regular.less
+++ b/fonts/cabin-regular.less
@@ -1,9 +1,26 @@
-@font-face {
-	font-family: "Cabin";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Cabin Regular"),
-		local("Cabin-Regular"),
-		url("/fonts/assets/Cabin-Regular.woff") format("woff"),
-		url("/fonts/assets/Cabin-Regular.ttf") format("truetype");
+@font-family-list_cabin-regular: "Cabin", sans-serif;
+@font-weight_cabin-regular: 700;
+
+.font-face_cabin-regular() {
+	@font-face {
+		font-family: "Cabin";
+		font-style: normal;
+		font-weight: @font-weight_cabin-regular;
+		src: local("Cabin"),
+			local("Cabin Regular"),
+			local("Cabin-Regular"),
+			url("/fonts/assets/Cabin-Regular.woff") format("woff"),
+			url("/fonts/assets/Cabin-Regular.ttf") format("truetype");
+	}
+}
+
+.font_cabin-regular() {
+	.font-face_cabin-regular();
+	font-family: @font-family-list_cabin-regular;
+	font-weight: @font-weight_cabin-regular;
+}
+.font_cabin-regular(@properties) {
+	.font-face_cabin-regular();
+	font: @properties @font-family-list_cabin-regular;
+	font-weight: @font-weight_cabin-regular;
 }
