Added `.color-as-rgb()`/`-as-hsl()` mixins and vars
New `.color-as-rgb()`/`-as-hsl()` mixins and `-as-rgb`/`hsl` color vars for use by Skrollr-compatible colors and gradients (Skrollr can't interpolate #abc123-style colors).

• New `.color-as-rgb()` mixin outputs the color as a CSS `rgb(…)` value by extracting the red, green, and blue values, then using string interpolation to build an `@as-rgb` value.
• Likewise, new `.color-as-hsl()` mixin does the same for hue, saturation, and lightness, returning a CSS `hsl(…)` value in a `@as-hsl` var.
• Added `@…-as-hsl` and `@…-as-rgb` vars for each of our colors by creating a mixin with the same name underscore-prefixed (e.g. `._blue-as-hsl()`) which calls `.color-as-hsl()` and then assigns the resulting `@as-hsl` var's value to its color-named var (e.g. `@blue-as-hsl`).  And then calls that mixin once, immediately afterwards.
	» Need to kinda “lambda” these calls because I don't think LESS supports custom “functions” (a closure that returns/writes a CSS value, as opposed to one that writes whole properties or rules), nor does it seem to support assigning a value to a var identifier that's been pieced together by string interpolation.
	» The remaining solution is to return via `@as-hsl`, then give that a unique name.

--- a/less/colors.less
+++ b/less/colors.less
@@ -43,3 +43,99 @@
 @purple-lighter: lighten(@purple, 30%);
 @teal-lighter:   lighten(@teal, 25%);
 @yellow-lighter: lighten(@yellow, 40%);
+
+
+// `hsl(…)`-generating variants
+
+._blue-as-hsl() { .color-as-hsl(@blue); @blue-as-hsl: @as-hsl; } ._blue-as-hsl();
+._cobalt-as-hsl() { .color-as-hsl(@cobalt); @cobalt-as-hsl: @as-hsl; } ._cobalt-as-hsl();
+._cyan-as-hsl() { .color-as-hsl(@cyan); @cyan-as-hsl: @as-hsl; } ._cyan-as-hsl();
+._green-as-hsl() { .color-as-hsl(@green); @green-as-hsl: @as-hsl; } ._green-as-hsl();
+._orange-as-hsl() { .color-as-hsl(@orange); @orange-as-hsl: @as-hsl; } ._orange-as-hsl();
+._purple-as-hsl() { .color-as-hsl(@purple); @purple-as-hsl: @as-hsl; } ._purple-as-hsl();
+._teal-as-hsl() { .color-as-hsl(@teal); @teal-as-hsl: @as-hsl; } ._teal-as-hsl();
+._yellow-as-hsl() { .color-as-hsl(@yellow); @yellow-as-hsl: @as-hsl; } ._yellow-as-hsl();
+
+._blue-dark-as-hsl() { .color-as-hsl(@blue-dark); @blue-dark-as-hsl: @as-hsl; } ._blue-dark-as-hsl();
+._cobalt-dark-as-hsl() { .color-as-hsl(@cobalt-dark); @cobalt-dark-as-hsl: @as-hsl; } ._cobalt-dark-as-hsl();
+._cyan-dark-as-hsl() { .color-as-hsl(@cyan-dark); @cyan-dark-as-hsl: @as-hsl; } ._cyan-dark-as-hsl();
+._green-dark-as-hsl() { .color-as-hsl(@green-dark); @green-dark-as-hsl: @as-hsl; } ._green-dark-as-hsl();
+._orange-dark-as-hsl() { .color-as-hsl(@orange-dark); @orange-dark-as-hsl: @as-hsl; } ._orange-dark-as-hsl();
+._purple-dark-as-hsl() { .color-as-hsl(@purple-dark); @purple-dark-as-hsl: @as-hsl; } ._purple-dark-as-hsl();
+._teal-dark-as-hsl() { .color-as-hsl(@teal-dark); @teal-dark-as-hsl: @as-hsl; } ._teal-dark-as-hsl();
+._yellow-dark-as-hsl() { .color-as-hsl(@yellow-dark); @yellow-dark-as-hsl: @as-hsl; } ._yellow-dark-as-hsl();
+
+._blue-darker-as-hsl() { .color-as-hsl(@blue-darker); @blue-darker-as-hsl: @as-hsl; } ._blue-darker-as-hsl();
+._cobalt-darker-as-hsl() { .color-as-hsl(@cobalt-darker); @cobalt-darker-as-hsl: @as-hsl; } ._cobalt-darker-as-hsl();
+._cyan-darker-as-hsl() { .color-as-hsl(@cyan-darker); @cyan-darker-as-hsl: @as-hsl; } ._cyan-darker-as-hsl();
+._green-darker-as-hsl() { .color-as-hsl(@green-darker); @green-darker-as-hsl: @as-hsl; } ._green-darker-as-hsl();
+._orange-darker-as-hsl() { .color-as-hsl(@orange-darker); @orange-darker-as-hsl: @as-hsl; } ._orange-darker-as-hsl();
+._purple-darker-as-hsl() { .color-as-hsl(@purple-darker); @purple-darker-as-hsl: @as-hsl; } ._purple-darker-as-hsl();
+._teal-darker-as-hsl() { .color-as-hsl(@teal-darker); @teal-darker-as-hsl: @as-hsl; } ._teal-darker-as-hsl();
+._yellow-darker-as-hsl() { .color-as-hsl(@yellow-darker); @yellow-darker-as-hsl: @as-hsl; } ._yellow-darker-as-hsl();
+
+._blue-light-as-hsl() { .color-as-hsl(@blue-light); @blue-light-as-hsl: @as-hsl; } ._blue-light-as-hsl();
+._cobalt-light-as-hsl() { .color-as-hsl(@cobalt-light); @cobalt-light-as-hsl: @as-hsl; } ._cobalt-light-as-hsl();
+._cyan-light-as-hsl() { .color-as-hsl(@cyan-light); @cyan-light-as-hsl: @as-hsl; } ._cyan-light-as-hsl();
+._green-light-as-hsl() { .color-as-hsl(@green-light); @green-light-as-hsl: @as-hsl; } ._green-light-as-hsl();
+._orange-light-as-hsl() { .color-as-hsl(@orange-light); @orange-light-as-hsl: @as-hsl; } ._orange-light-as-hsl();
+._purple-light-as-hsl() { .color-as-hsl(@purple-light); @purple-light-as-hsl: @as-hsl; } ._purple-light-as-hsl();
+._teal-light-as-hsl() { .color-as-hsl(@teal-light); @teal-light-as-hsl: @as-hsl; } ._teal-light-as-hsl();
+._yellow-light-as-hsl() { .color-as-hsl(@yellow-light); @yellow-light-as-hsl: @as-hsl; } ._yellow-light-as-hsl();
+
+._blue-lighter-as-hsl() { .color-as-hsl(@blue-lighter); @blue-lighter-as-hsl: @as-hsl; } ._blue-lighter-as-hsl();
+._cobalt-lighter-as-hsl() { .color-as-hsl(@cobalt-lighter); @cobalt-lighter-as-hsl: @as-hsl; } ._cobalt-lighter-as-hsl();
+._cyan-lighter-as-hsl() { .color-as-hsl(@cyan-lighter); @cyan-lighter-as-hsl: @as-hsl; } ._cyan-lighter-as-hsl();
+._green-lighter-as-hsl() { .color-as-hsl(@green-lighter); @green-lighter-as-hsl: @as-hsl; } ._green-lighter-as-hsl();
+._orange-lighter-as-hsl() { .color-as-hsl(@orange-lighter); @orange-lighter-as-hsl: @as-hsl; } ._orange-lighter-as-hsl();
+._purple-lighter-as-hsl() { .color-as-hsl(@purple-lighter); @purple-lighter-as-hsl: @as-hsl; } ._purple-lighter-as-hsl();
+._teal-lighter-as-hsl() { .color-as-hsl(@teal-lighter); @teal-lighter-as-hsl: @as-hsl; } ._teal-lighter-as-hsl();
+._yellow-lighter-as-hsl() { .color-as-hsl(@yellow-lighter); @yellow-lighter-as-hsl: @as-hsl; } ._yellow-lighter-as-hsl();
+
+
+// `rgb(…)`-generating variants
+
+._blue-as-rgb() { .color-as-rgb(@blue); @blue-as-rgb: @as-hsl; } ._blue-as-rgb();
+._cobalt-as-rgb() { .color-as-rgb(@cobalt); @cobalt-as-rgb: @as-hsl; } ._cobalt-as-rgb();
+._cyan-as-rgb() { .color-as-rgb(@cyan); @cyan-as-rgb: @as-hsl; } ._cyan-as-rgb();
+._green-as-rgb() { .color-as-rgb(@green); @green-as-rgb: @as-hsl; } ._green-as-rgb();
+._orange-as-rgb() { .color-as-rgb(@orange); @orange-as-rgb: @as-hsl; } ._orange-as-rgb();
+._purple-as-rgb() { .color-as-rgb(@purple); @purple-as-rgb: @as-hsl; } ._purple-as-rgb();
+._teal-as-rgb() { .color-as-rgb(@teal); @teal-as-rgb: @as-hsl; } ._teal-as-rgb();
+._yellow-as-rgb() { .color-as-rgb(@yellow); @yellow-as-rgb: @as-hsl; } ._yellow-as-rgb();
+
+._blue-dark-as-rgb() { .color-as-rgb(@blue-dark); @blue-dark-as-rgb: @as-hsl; } ._blue-dark-as-rgb();
+._cobalt-dark-as-rgb() { .color-as-rgb(@cobalt-dark); @cobalt-dark-as-rgb: @as-hsl; } ._cobalt-dark-as-rgb();
+._cyan-dark-as-rgb() { .color-as-rgb(@cyan-dark); @cyan-dark-as-rgb: @as-hsl; } ._cyan-dark-as-rgb();
+._green-dark-as-rgb() { .color-as-rgb(@green-dark); @green-dark-as-rgb: @as-hsl; } ._green-dark-as-rgb();
+._orange-dark-as-rgb() { .color-as-rgb(@orange-dark); @orange-dark-as-rgb: @as-hsl; } ._orange-dark-as-rgb();
+._purple-dark-as-rgb() { .color-as-rgb(@purple-dark); @purple-dark-as-rgb: @as-hsl; } ._purple-dark-as-rgb();
+._teal-dark-as-rgb() { .color-as-rgb(@teal-dark); @teal-dark-as-rgb: @as-hsl; } ._teal-dark-as-rgb();
+._yellow-dark-as-rgb() { .color-as-rgb(@yellow-dark); @yellow-dark-as-rgb: @as-hsl; } ._yellow-dark-as-rgb();
+
+._blue-darker-as-rgb() { .color-as-rgb(@blue-darker); @blue-darker-as-rgb: @as-hsl; } ._blue-darker-as-rgb();
+._cobalt-darker-as-rgb() { .color-as-rgb(@cobalt-darker); @cobalt-darker-as-rgb: @as-hsl; } ._cobalt-darker-as-rgb();
+._cyan-darker-as-rgb() { .color-as-rgb(@cyan-darker); @cyan-darker-as-rgb: @as-hsl; } ._cyan-darker-as-rgb();
+._green-darker-as-rgb() { .color-as-rgb(@green-darker); @green-darker-as-rgb: @as-hsl; } ._green-darker-as-rgb();
+._orange-darker-as-rgb() { .color-as-rgb(@orange-darker); @orange-darker-as-rgb: @as-hsl; } ._orange-darker-as-rgb();
+._purple-darker-as-rgb() { .color-as-rgb(@purple-darker); @purple-darker-as-rgb: @as-hsl; } ._purple-darker-as-rgb();
+._teal-darker-as-rgb() { .color-as-rgb(@teal-darker); @teal-darker-as-rgb: @as-hsl; } ._teal-darker-as-rgb();
+._yellow-darker-as-rgb() { .color-as-rgb(@yellow-darker); @yellow-darker-as-rgb: @as-hsl; } ._yellow-darker-as-rgb();
+
+._blue-light-as-rgb() { .color-as-rgb(@blue-light); @blue-light-as-rgb: @as-hsl; } ._blue-light-as-rgb();
+._cobalt-light-as-rgb() { .color-as-rgb(@cobalt-light); @cobalt-light-as-rgb: @as-hsl; } ._cobalt-light-as-rgb();
+._cyan-light-as-rgb() { .color-as-rgb(@cyan-light); @cyan-light-as-rgb: @as-hsl; } ._cyan-light-as-rgb();
+._green-light-as-rgb() { .color-as-rgb(@green-light); @green-light-as-rgb: @as-hsl; } ._green-light-as-rgb();
+._orange-light-as-rgb() { .color-as-rgb(@orange-light); @orange-light-as-rgb: @as-hsl; } ._orange-light-as-rgb();
+._purple-light-as-rgb() { .color-as-rgb(@purple-light); @purple-light-as-rgb: @as-hsl; } ._purple-light-as-rgb();
+._teal-light-as-rgb() { .color-as-rgb(@teal-light); @teal-light-as-rgb: @as-hsl; } ._teal-light-as-rgb();
+._yellow-light-as-rgb() { .color-as-rgb(@yellow-light); @yellow-light-as-rgb: @as-hsl; } ._yellow-light-as-rgb();
+
+._blue-lighter-as-rgb() { .color-as-rgb(@blue-lighter); @blue-lighter-as-rgb: @as-hsl; } ._blue-lighter-as-rgb();
+._cobalt-lighter-as-rgb() { .color-as-rgb(@cobalt-lighter); @cobalt-lighter-as-rgb: @as-hsl; } ._cobalt-lighter-as-rgb();
+._cyan-lighter-as-rgb() { .color-as-rgb(@cyan-lighter); @cyan-lighter-as-rgb: @as-hsl; } ._cyan-lighter-as-rgb();
+._green-lighter-as-rgb() { .color-as-rgb(@green-lighter); @green-lighter-as-rgb: @as-hsl; } ._green-lighter-as-rgb();
+._orange-lighter-as-rgb() { .color-as-rgb(@orange-lighter); @orange-lighter-as-rgb: @as-hsl; } ._orange-lighter-as-rgb();
+._purple-lighter-as-rgb() { .color-as-rgb(@purple-lighter); @purple-lighter-as-rgb: @as-hsl; } ._purple-lighter-as-rgb();
+._teal-lighter-as-rgb() { .color-as-rgb(@teal-lighter); @teal-lighter-as-rgb: @as-hsl; } ._teal-lighter-as-rgb();
+._yellow-lighter-as-rgb() { .color-as-rgb(@yellow-lighter); @yellow-lighter-as-rgb: @as-hsl; } ._yellow-lighter-as-rgb();
