Minor: Bootstrap font-size-base of 20px.
• Upped the Bootstrap config var `@font-size-base` from the default of 14px to 20px.
• Updated the .monologue class to set the font with size of `@font-size-base * 2.5` (20px * 2.5 = 50px) instead of setting it directly.
	» I think this is the way Bootstrap is meant to be used, in lieu of using Bootstrap's own vars and classes.

--- a/less/main.less
+++ b/less/main.less
@@ -11,6 +11,12 @@
 
 
 
+/// Bootstrap default overrides
+
+@font-size-base: 20px;
+
+
+
 // full-screen-height adjustments, rules
 
 html, body { height: 100%; }
@@ -19,7 +25,8 @@ html, body { height: 100%; }
 .generate-screenheights(@screenheights, vh-);
 
 .monologue {
-	.font_dancing-script(50px);
+	@font-size: @font-size-base * 2.5;
+	.font_dancing-script(@font-size);
 }
 
 
