--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6405,6 +6405,9 @@ body {
 .phase {
   position: relative;
 }
+.phase > .back {
+  z-index: -1;
+}
 .phase > .back,
 .phase > .back .back {
   position: absolute;
@@ -6413,13 +6416,10 @@ body {
 }
 #sky-phase {
   position: relative;
-  background-color: #0a1828;
-  background-image: -webkit-linear-gradient(top, #1a4163 0%, #0a1828 100%);
-  background-image: -o-linear-gradient(top, #1a4163 0%, #0a1828 100%);
-  background-image: linear-gradient(to bottom, #1a4163 0%, #0a1828 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a4163', endColorstr='#ff0a1828', GradientType=0);
   color: #6fa8da;
+}
+#sky-phase > .back {
+  z-index: -1;
 }
 #sky-phase > .back,
 #sky-phase > .back .back {
@@ -6427,15 +6427,20 @@ body {
   width: 100%;
   height: 100%;
 }
+#sky-phase > .fill {
+  background-color: #0a1828;
+  background-image: -webkit-linear-gradient(top, #1a4163 0%, #0a1828 100%);
+  background-image: -o-linear-gradient(top, #1a4163 0%, #0a1828 100%);
+  background-image: linear-gradient(to bottom, #1a4163 0%, #0a1828 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a4163', endColorstr='#ff0a1828', GradientType=0);
+}
 #ambitions-phase {
   position: relative;
-  background-color: #3e2940;
-  background-image: -webkit-linear-gradient(top, #724b75 0%, #1e5558 100%);
-  background-image: -o-linear-gradient(top, #724b75 0%, #1e5558 100%);
-  background-image: linear-gradient(to bottom, #724b75 0%, #1e5558 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff724b75', endColorstr='#ff1e5558', GradientType=0);
   color: white;
+}
+#ambitions-phase > .back {
+  z-index: -1;
 }
 #ambitions-phase > .back,
 #ambitions-phase > .back .back {
@@ -6443,21 +6448,34 @@ body {
   width: 100%;
   height: 100%;
 }
+#ambitions-phase > .fill {
+  background-color: #3e2940;
+  background-image: -webkit-linear-gradient(top, #724b75 0%, #1e5558 100%);
+  background-image: -o-linear-gradient(top, #724b75 0%, #1e5558 100%);
+  background-image: linear-gradient(to bottom, #724b75 0%, #1e5558 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff724b75', endColorstr='#ff1e5558', GradientType=0);
+}
 #title-phase {
   position: relative;
-  background-color: #accdea;
-  background-image: -webkit-linear-gradient(top, #ffffff 0%, #accdea 100%);
-  background-image: -o-linear-gradient(top, #ffffff 0%, #accdea 100%);
-  background-image: linear-gradient(to bottom, #ffffff 0%, #accdea 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffaccdea', GradientType=0);
   color: #3e2940;
+}
+#title-phase > .back {
+  z-index: -1;
 }
 #title-phase > .back,
 #title-phase > .back .back {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+#title-phase > .fill {
+  background-color: #accdea;
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #accdea 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #accdea 100%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #accdea 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffaccdea', GradientType=0);
 }
 .starfield .image,
 #starfield3 .image,
