--- a/less/main.less
+++ b/less/main.less
@@ -37,6 +37,8 @@ html, body { height: 100%; }
 	position: relative;
 	
 	> .back {
+		z-index: -1;
+		
 		&, & .back {
 			position: absolute;
 			width: 100%; height: 100%;
@@ -46,26 +48,32 @@ html, body { height: 100%; }
 #sky-phase {
 	.phase;
 	
-	background-color: @blue-darker;
-	#gradient > .vertical(@cobalt-darker, @blue-darker);
-	
 	color: @cobalt;
+	
+	> .fill {
+		background-color: @blue-darker;
+		#gradient > .vertical(@cobalt-darker, @blue-darker);
+	}
 }
 #ambitions-phase {
 	.phase;
 	
-	background-color: @purple-darker;
-	#gradient > .vertical(@purple-dark, @teal-darker);
-	
 	color: white;
+	
+	> .fill {
+		background-color: @purple-darker;
+		#gradient > .vertical(@purple-dark, @teal-darker);
+	}
 }
 #title-phase {
 	.phase;
 	
-	background-color: @cobalt-light;
-	#gradient > .vertical(white, @cobalt-light);
-	
 	color: @purple-darker;
+	
+	> .fill {
+		background-color: @cobalt-light;
+		#gradient > .vertical(white, @cobalt-light);
+	}
 }
 
 
