--- a/less/main.less
+++ b/less/main.less
@@ -104,7 +104,7 @@ html, body { height: 100%; }
 		background-position: @initial-background-position;
 		
 		.-skrollr-dry-animation(starfield1pos; {
-			@backgroundPositionProp: ~"background-position[swing]";
+			@backgroundPositionProp: ~"background-position[linear]";
 			start { @{backgroundPositionProp}: @initial-background-position; }
 			top-bottom { @{backgroundPositionProp}: 0px -150px; }
 		});
@@ -129,7 +129,7 @@ html, body { height: 100%; }
 		background-position: @initial-background-position;
 		
 		.-skrollr-dry-animation(starfield2pos; {
-			@backgroundPositionProp: ~"background-position[swing]";
+			@backgroundPositionProp: ~"background-position[linear]";
 			start { @{backgroundPositionProp}: @initial-background-position; }
 			top-bottom { @{backgroundPositionProp}: 0px -100px; }
 		});
@@ -156,7 +156,7 @@ html, body { height: 100%; }
 		background-position: @initial-background-position;
 		
 		.-skrollr-dry-animation(starfield3pos; {
-			@backgroundPositionProp: ~"background-position[swing]";
+			@backgroundPositionProp: ~"background-position[linear]";
 			start { @{backgroundPositionProp}: @initial-background-position; }
 			top-bottom { @{backgroundPositionProp}: 0px -125px; }
 		});
@@ -183,7 +183,7 @@ html, body { height: 100%; }
 		background-position: @initial-background-position;
 		
 		.-skrollr-dry-animation(starfield4pos; {
-			@backgroundPositionProp: ~"background-position[accelDecel]";
+			@backgroundPositionProp: ~"background-position[linear]";
 			start { @{backgroundPositionProp}: @initial-background-position; }
 			top-bottom { @{backgroundPositionProp}: 0px -115px; }
 		});
