--- a/css/styles.css
+++ b/css/styles.css
@@ -6317,86 +6317,77 @@ html,
 body {
   height: 100%;
 }
-.vh-50 {
-  height: 50%;
+.screen-height-rel .vh-50,
+.screen-height-rel.vh-50 {
+  min-height: 50vh;
 }
-.vh-50 > .vh-50 {
-  height: 100%;
+.screen-height-rel .vh-100,
+.screen-height-rel.vh-100 {
+  min-height: 100vh;
 }
-.vh-100 {
-  height: 100%;
+.screen-height-rel .vh-150,
+.screen-height-rel.vh-150 {
+  min-height: 150vh;
 }
-.vh-100 > .vh-50 {
-  height: 50%;
+.screen-height-rel .vh-200,
+.screen-height-rel.vh-200 {
+  min-height: 200vh;
 }
-.vh-100 > .vh-100 {
-  height: 100%;
+.screen-height-rel .vh-300,
+.screen-height-rel.vh-300 {
+  min-height: 300vh;
 }
-.vh-150 {
-  height: 150%;
+.screen-height-rel .vh-400,
+.screen-height-rel.vh-400 {
+  min-height: 400vh;
 }
-.vh-150 > .vh-50 {
-  height: 33.33333333%;
+.base-height-rel .vh-50,
+.base-height-rel.vh-50 {
+  height: 500px;
 }
-.vh-150 > .vh-100 {
-  height: 66.66666667%;
+.base-height-rel .vh-100,
+.base-height-rel.vh-100 {
+  height: 1000px;
 }
-.vh-150 > .vh-150 {
-  height: 100%;
+.base-height-rel .vh-150,
+.base-height-rel.vh-150 {
+  height: 1500px;
 }
-.vh-200 {
-  height: 200%;
+.base-height-rel .vh-200,
+.base-height-rel.vh-200 {
+  height: 2000px;
 }
-.vh-200 > .vh-50 {
-  height: 25%;
+.base-height-rel .vh-300,
+.base-height-rel.vh-300 {
+  height: 3000px;
 }
-.vh-200 > .vh-100 {
-  height: 50%;
+.base-height-rel .vh-400,
+.base-height-rel.vh-400 {
+  height: 4000px;
 }
-.vh-200 > .vh-150 {
-  height: 75%;
+.line-height-rel .vh-50,
+.line-height-rel.vh-50 {
+  height: 350px;
 }
-.vh-200 > .vh-200 {
-  height: 100%;
+.line-height-rel .vh-100,
+.line-height-rel.vh-100 {
+  height: 700px;
 }
-.vh-300 {
-  height: 300%;
+.line-height-rel .vh-150,
+.line-height-rel.vh-150 {
+  height: 1050px;
 }
-.vh-300 > .vh-50 {
-  height: 16.66666667%;
+.line-height-rel .vh-200,
+.line-height-rel.vh-200 {
+  height: 1400px;
 }
-.vh-300 > .vh-100 {
-  height: 33.33333333%;
+.line-height-rel .vh-300,
+.line-height-rel.vh-300 {
+  height: 2100px;
 }
-.vh-300 > .vh-150 {
-  height: 50%;
-}
-.vh-300 > .vh-200 {
-  height: 66.66666667%;
-}
-.vh-300 > .vh-300 {
-  height: 100%;
-}
-.vh-400 {
-  height: 400%;
-}
-.vh-400 > .vh-50 {
-  height: 12.5%;
-}
-.vh-400 > .vh-100 {
-  height: 25%;
-}
-.vh-400 > .vh-150 {
-  height: 37.5%;
-}
-.vh-400 > .vh-200 {
-  height: 50%;
-}
-.vh-400 > .vh-300 {
-  height: 75%;
-}
-.vh-400 > .vh-400 {
-  height: 100%;
+.line-height-rel .vh-400,
+.line-height-rel.vh-400 {
+  height: 2800px;
 }
 .monologue {
   font: 50px "Dancing Script", cursive;
