--- a/less/main.less
+++ b/less/main.less
@@ -21,8 +21,39 @@
 
 html, body { height: 100%; }
 
-@screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
-.generate-screenheights(@screenheights, vh-);
+.screen-height-rel {
+	.vh() {}
+	& .vh-50, &.vh-50 { .vh(); min-height: 50vh; }
+	& .vh-100, &.vh-100 { .vh(); min-height: 100vh; }
+	& .vh-150, &.vh-150 { .vh(); min-height: 150vh; }
+	& .vh-200, &.vh-200 { .vh(); min-height: 200vh; }
+	& .vh-300, &.vh-300 { .vh(); min-height: 300vh; }
+	& .vh-400, &.vh-400 { .vh(); min-height: 400vh; }
+}
+
+@base-height: 1000px;
+@base-height-rel-height-base: (@base-height / 100);
+.base-height-rel {
+	.vh() {}
+	& .vh-50, &.vh-50 { .vh(); height: (50 * @base-height-rel-height-base); }
+	& .vh-100, &.vh-100 { .vh(); height: (100 * @base-height-rel-height-base); }
+	& .vh-150, &.vh-150 { .vh(); height: (150 * @base-height-rel-height-base); }
+	& .vh-200, &.vh-200 { .vh(); height: (200 * @base-height-rel-height-base); }
+	& .vh-300, &.vh-300 { .vh(); height: (300 * @base-height-rel-height-base); }
+	& .vh-400, &.vh-400 { .vh(); height: (400 * @base-height-rel-height-base); }
+}
+
+@line-height-rel-height-base: (@line-height-computed / 4);
+.line-height-rel {
+	.vh() {}
+	& .vh-50, &.vh-50 { .vh(); height: (50 * @line-height-rel-height-base); }
+	& .vh-100, &.vh-100 { .vh(); height: (100 * @line-height-rel-height-base); }
+	& .vh-150, &.vh-150 { .vh(); height: (150 * @line-height-rel-height-base); }
+	& .vh-200, &.vh-200 { .vh(); height: (200 * @line-height-rel-height-base); }
+	& .vh-300, &.vh-300 { .vh(); height: (300 * @line-height-rel-height-base); }
+	& .vh-400, &.vh-400 { .vh(); height: (400 * @line-height-rel-height-base); }
+}
+
 
 .monologue {
 	@font-size: (@font-size-base * 2.5);
