--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6414,6 +6414,10 @@ body {
   width: 100%;
   height: 100%;
 }
+.phase > .back.fixed,
+.phase > .back .back.fixed {
+  position: fixed;
+}
 #sky-phase {
   position: relative;
   color: #6fa8da;
@@ -6427,7 +6431,12 @@ body {
   width: 100%;
   height: 100%;
 }
-#sky-phase > .fill {
+#sky-phase > .back.fixed,
+#sky-phase > .back .back.fixed {
+  position: fixed;
+}
+#sky-phase > .back.fill,
+#sky-phase > .back .back.fill {
   background-color: #0a1828;
   background-image: -webkit-linear-gradient(top, #1a4163 0%, #0a1828 100%);
   background-image: -o-linear-gradient(top, #1a4163 0%, #0a1828 100%);
@@ -6448,7 +6457,12 @@ body {
   width: 100%;
   height: 100%;
 }
-#ambitions-phase > .fill {
+#ambitions-phase > .back.fixed,
+#ambitions-phase > .back .back.fixed {
+  position: fixed;
+}
+#ambitions-phase > .back.fill,
+#ambitions-phase > .back .back.fill {
   background-color: #3e2940;
   background-image: -webkit-linear-gradient(top, #724b75 0%, #1e5558 100%);
   background-image: -o-linear-gradient(top, #724b75 0%, #1e5558 100%);
@@ -6469,7 +6483,12 @@ body {
   width: 100%;
   height: 100%;
 }
-#title-phase > .fill {
+#title-phase > .back.fixed,
+#title-phase > .back .back.fixed {
+  position: fixed;
+}
+#title-phase > .back.fill,
+#title-phase > .back .back.fill {
   background-color: #accdea;
   background-image: -webkit-linear-gradient(top, #ffffff 0%, #accdea 100%);
   background-image: -o-linear-gradient(top, #ffffff 0%, #accdea 100%);
@@ -6491,23 +6510,23 @@ body {
   background-repeat: repeat;
 }
 @-skrollr-keyframes starfield1op {
-  start {
+  _sky_phase_start {
     opacity[quadratic]: 1;
   }
-  top-bottom {
+  _sky_phase_end {
     opacity[quadratic]: 1.0;
   }
 }
 #starfield1 .image {
-  background: url('../graphics/starfield1.s512.png') fixed;
   background-position: 0px 0px;
+  background: url('../graphics/starfield1.s512.png');
   -skrollr-animation-name: starfield1pos;
 }
 @-skrollr-keyframes starfield1pos {
-  start {
+  _sky_phase_start {
     background-position[linear]: 0px 0px;
   }
-  top-bottom {
+  _sky_phase_end {
     background-position[linear]: 0px -150px;
   }
 }
@@ -6520,23 +6539,23 @@ body {
   background-repeat: repeat;
 }
 @-skrollr-keyframes starfield2op {
-  center {
+  _sky_phase_center {
     opacity[quadratic]: 0;
   }
-  top-bottom {
+  _sky_phase_end {
     opacity[quadratic]: 1.0;
   }
 }
 #starfield2 .image {
-  background: url('../graphics/starfield2.s1024.png') fixed;
   background-position: 0px 0px;
+  background: url('../graphics/starfield2.s1024.png');
   -skrollr-animation-name: starfield2pos;
 }
 @-skrollr-keyframes starfield2pos {
-  start {
+  _sky_phase_start {
     background-position[linear]: 0px 0px;
   }
-  top-bottom {
+  _sky_phase_end {
     background-position[linear]: 0px -100px;
   }
 }
@@ -6549,23 +6568,23 @@ body {
   background-repeat: repeat;
 }
 @-skrollr-keyframes starfield3op {
-  center {
+  _sky_phase_center {
     opacity[quadratic]: 0;
   }
-  top-bottom {
+  _sky_phase_end {
     opacity[quadratic]: 1.0;
   }
 }
 #starfield3 .image {
-  background: url('../graphics/starfield3.s720.png') fixed;
   background-position: 0px 0px;
+  background: url('../graphics/starfield3.s720.png');
   -skrollr-animation-name: starfield3pos;
 }
 @-skrollr-keyframes starfield3pos {
-  start {
+  _sky_phase_start {
     background-position[linear]: 0px 0px;
   }
-  top-bottom {
+  _sky_phase_end {
     background-position[linear]: 0px -125px;
   }
 }
@@ -6578,23 +6597,23 @@ body {
   background-repeat: repeat;
 }
 @-skrollr-keyframes starfield4op {
-  start {
+  _sky_phase_start {
     opacity[quadratic]: 0.25;
   }
-  center {
+  _sky_phase_center {
     opacity[quadratic]: 1.0;
   }
 }
 #starfield4 .image {
-  background: url('../graphics/starfield4.s700.png') fixed;
   background-position: 0px 0px;
+  background: url('../graphics/starfield4.s700.png');
   -skrollr-animation-name: starfield4pos;
 }
 @-skrollr-keyframes starfield4pos {
-  start {
+  _sky_phase_start {
     background-position[linear]: 0px 0px;
   }
-  top-bottom {
+  _sky_phase_end {
     background-position[linear]: 0px -115px;
   }
 }
