Added “opacity != 1.0” guards to `starfield*op` animations
• Added `@endOpacity` vars to each starfield with the values formerly in the 2nd `starfield*op` keyframe, and set each of the second keyframes to use `@endOpacity`.
	» This is so that we can check the value beforehand.
• Added a `& when { … }` if-style guard around the `.opacity()` and `.-skrollr-dry-animation()` calls, with conditional logic to skip it if both `@initialOpacity` and `@endOpacity` are `1.0`.
	» If we're both starting at full opacity and ending at it, there's really no reason to have the opacity rule or to have Skrollr set up an animation.
• Minor: Renamed `@initial-opacity` vars to `@initialOpacity` for consistency.

--- a/less/main.less
+++ b/less/main.less
@@ -107,14 +107,17 @@ html, body { height: 100%; }
 #starfield1 {
 	.starfield;
 	
-	@initial-opacity: 1.0;
-	.opacity(@initial-opacity);
-	
-	.-skrollr-dry-animation(starfield1op; {
-		@opacityProp: ~"opacity[quadratic]";
-		_sky_phase_start { @{opacityProp}: @initial-opacity; }
-		_sky_phase_end { @{opacityProp}: 1.0; }
-	});
+	@initialOpacity: 1.0;
+	@endOpacity: 1.0;
+	& when not (@initialOpacity = 1.0) and (@endOpacity = 1.0) {
+		.opacity(@initialOpacity);
+		
+		.-skrollr-dry-animation(starfield1op; {
+			@opacityProp: ~"opacity[quadratic]";
+			_sky_phase_start { @{opacityProp}: @initialOpacity; }
+			_sky_phase_end { @{opacityProp}: @endOpacity }
+		});
+	}
 	
 	.image {
 	
@@ -132,14 +135,17 @@ html, body { height: 100%; }
 #starfield2 {
 	.starfield;
 	
-	@initial-opacity: 0.0;
-	.opacity(@initial-opacity);
-	
-	.-skrollr-dry-animation(starfield2op; {
-		@opacityProp: ~"opacity[quadratic]";
-		_sky_phase_center { @{opacityProp}: @initial-opacity; }
-		_sky_phase_end { @{opacityProp}: 1.0; }
-	});
+	@initialOpacity: 0.0;
+	@endOpacity: 1.0;
+	& when not (@initialOpacity = 1.0) and (@endOpacity = 1.0) {
+		.opacity(@initialOpacity);
+		
+		.-skrollr-dry-animation(starfield2op; {
+			@opacityProp: ~"opacity[quadratic]";
+			_sky_phase_center { @{opacityProp}: @initialOpacity; }
+			_sky_phase_end { @{opacityProp}: @endOpacity; }
+		});
+	}
 	
 	.image {
 	
@@ -157,14 +163,17 @@ html, body { height: 100%; }
 #starfield3 {
 	.starfield;
 	
-	@initial-opacity: 0.0;
-	.opacity(@initial-opacity);
-	
-	.-skrollr-dry-animation(starfield3op; {
-		@opacityProp: ~"opacity[quadratic]";
-		_sky_phase_center { @{opacityProp}: @initial-opacity; }
-		_sky_phase_end { @{opacityProp}: 1.0; }
-	});
+	@initialOpacity: 0.0;
+	@endOpacity: 1.0;
+	& when not (@initialOpacity = 1.0) and (@endOpacity = 1.0) {
+		.opacity(@initialOpacity);
+		
+		.-skrollr-dry-animation(starfield3op; {
+			@opacityProp: ~"opacity[quadratic]";
+			_sky_phase_center { @{opacityProp}: @initialOpacity; }
+			_sky_phase_end { @{opacityProp}: @endOpacity; }
+		});
+	}
 	
 	.image {
 		&:extend(.starfield .image);
@@ -184,14 +193,17 @@ html, body { height: 100%; }
 #starfield4 {
 	.starfield;
 	
-	@initial-opacity: 0.25;
-	.opacity(@initial-opacity);
-	
-	.-skrollr-dry-animation(starfield4op; {
-		@opacityProp: ~"opacity[quadratic]";
-		_sky_phase_start { @{opacityProp}: @initial-opacity; }
-		_sky_phase_center { @{opacityProp}: 1.0; }
-	});
+	@initialOpacity: 0.25;
+	@endOpacity: 1.0;
+	& when not (@initialOpacity = 1.0) and (@endOpacity = 1.0) {
+		.opacity(@initialOpacity);
+		
+		.-skrollr-dry-animation(starfield4op; {
+			@opacityProp: ~"opacity[quadratic]";
+			_sky_phase_start { @{opacityProp}: @initialOpacity; }
+			_sky_phase_center { @{opacityProp}: @endOpacity; }
+		});
+	}
 	
 	.image {
 		&:extend(.starfield .image);
