Minor: Enabled LESS strictMath & strictUnits
• Enabled the `strictMath` option, which only performs LESS math when a set of extra parentheses are around the operation(s).
	» I like this because it makes it clear that the early (compile-time) calculation is intentional, rather than wanting a later (browser-time) calculation (e.g. with `calc(…)`).
	• Updated existing math here & there to have the extra parenthesis-wrapping.  (Honestly, more of my not-yet-finished-and-checked-in code uses math than what's currently committed.)
• Enabled the `strictUnits` option, which illogical math like `3px * 5px` throws errors (since px*px is px², and CSS doesn't have units for areas).
	» I wasn't in violation of this one, but seems to be a nice safety guard for late-night coding sessions.  LESS HARD MODE ACTIVATE!!@!!!!!!!11#@^

--- a/less/main.less
+++ b/less/main.less
@@ -25,7 +25,7 @@ html, body { height: 100%; }
 .generate-screenheights(@screenheights, vh-);
 
 .monologue {
-	@font-size: @font-size-base * 2.5;
+	@font-size: (@font-size-base * 2.5);
 	.font_dancing-script(@font-size);
 }
 
